name:                bce
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Yuriy Netesov
maintainer:          yuriy.netesov@gmail.com
-- copyright:           
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
    hs-source-dirs: src
    ghc-options: -g
    build-depends: QuickCheck >= 2.8.2
                 , Spock >= 0.12.0.0
                 , aeson >= 0.11.2.1
                 , base
                 , base16-bytestring
                 , binary
                 , bytestring
                 , bytestring-arbitrary >= 0.1.1
                 , concurrent-extra
                 , containers
                 , cryptohash-sha256
                 , data-default
                 , directory
                 , either
                 , hspec >= 2.2.4
                 , leveldb-haskell
                 , mtl
                 , network
                 , random
                 , stm
                 , text >= 1.2.2.1
                 , time
                 , transformers
                 , word8
                 , ed25519-donna
                 , crypto-api
                 
    exposed-modules: Bce.BlockChain
                   , Bce.Hash
                   , Bce.BlockChainHash
                   , Bce.BlockChainSerialization
                   , Bce.Difficulity
                   , Bce.Util
                   , Bce.InitialBlock                   
                   , Bce.Crypto
                   , Bce.P2p
                   , Bce.Networking
                   , Bce.Miner
                   , Bce.TimeStamp
                   , Bce.DbFs
                   , Bce.VerifiedDb
                   , Bce.BlockChainVerification                   
                   , Bce.Logger
                   , Bce.Cache



    default-language:    Haskell2010    
                                         

executable bcedaemon
    ghc-options: -g
    main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
    build-depends:       Cabal,
                         QuickCheck >= 2.8.2,
                         Spock >= 0.12.0.0,
                         aeson,
                         aeson >= 0.11.2.1,
                         base,
                         bce,
                         binary,
                         bytestring,
                         bytestring-arbitrary,
                         bytestring-arbitrary >= 0.1.1,
                         concurrent-extra,
                         containers,
                         data-default,
                         directory,
                         either,
                         hspec >= 2.2.4,
                         leveldb-haskell,
                         mtl,
                         network,
                         random,
                         stm,
                         text,
                         text >= 1.2.2.1,
                         time,
                         transformers,
                         word8,
                         crypto-api

    hs-source-dirs: src/BceDaemon
    default-language:    Haskell2010


Test-Suite test-hunit-example
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    Main-is:          Main.hs
    Build-Depends:  QuickCheck >= 2.8.2
                  , Spock >= 0.12.0.0
                  , aeson >= 0.11.2.1
                  , base
                  , bce
                  , binary
                  , bytestring
                  , bytestring-arbitrary
                  , bytestring-arbitrary >= 0.1.1
                  , concurrent-extra
                  , containers
                  , data-default
                  , directory
                  , either
                  , hspec
                  , hspec >= 2.2.4
                  , leveldb-haskell
                  , mtl
                  , network
                  , random
                  , stm
                  , text >= 1.2.2.1
                  , time
                  , transformers
                  , word8
                  , crypto-api

    default-language:    Haskell2010                  
                         
