name:                bce
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Yuriy Netesov
maintainer:          yuriy.netesov@gmail.com
-- copyright:           
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
    hs-source-dirs: src
    ghc-options: -threaded
    build-depends: DRBG
                 , QuickCheck >= 2.8.2
                 , Spock >= 0.12.0.0
                 , aeson >= 0.11.2.1
                 , base
                 , base16-bytestring
                 , binary
                 , bytestring
                 , bytestring-arbitrary >= 0.1.1
                 , concurrent-extra
                 , containers
                 , crypto-api
                 , cryptohash-sha256
                 , data-default
                 , directory >= 1.3
                 , ed25519-donna
                 , either
                 , extra
                 , hspec >= 2.2.4
                 , http-client >= 0.5.7.0
                 , leveldb-haskell
                 , mtl
                 , network
                 , parsec >= 3.1.11
                 , random
                 , stm
                 , text >= 1.2.2.1
                 , time
                 , transformers
                 , word8
                 
    exposed-modules: Bce.BlockChain
                   , Bce.Hash
                   , Bce.BlockChainHash
                   , Bce.BlockChainSerialization
                   , Bce.Difficulity
                   , Bce.Util
                   , Bce.InitialBlock                   
                   , Bce.Crypto
                   , Bce.P2p
                   , Bce.Networking
                   , Bce.Miner
                   , Bce.TimeStamp
                   , Bce.DbFs
                   , Bce.Verified                   
                   , Bce.VerifiedDb
                   , Bce.BlockChainVerification                   
                   , Bce.Logger
                   , Bce.Cache
                   , Bce.RestTypes


    default-language:    Haskell2010    
                                         

executable bcedaemon
    ghc-options: -threaded
    main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
    build-depends:       Cabal,
                         DRBG,
                         QuickCheck >= 2.8.2,
                         Spock >= 0.12.0.0,
                         aeson,
                         aeson >= 0.11.2.1,
                         base,
                         bce,
                         binary,
                         bytestring,
                         bytestring-arbitrary,
                         bytestring-arbitrary >= 0.1.1,
                         concurrent-extra,
                         containers,
                         crypto-api,
                         data-default,
                         directory >= 1.3,
                         either,
                         extra,
                         hspec >= 2.2.4,
                         http-client >= 0.5.7.0,
                         leveldb-haskell,
                         mtl,
                         network,
                         parsec >= 3.1.11,
                         random,
                         stm,
                         text,
                         text >= 1.2.2.1,
                         time,
                         transformers,
                         word8

    hs-source-dirs: src/BceDaemon
    default-language:    Haskell2010


executable bcecli
    ghc-options: -threaded
    main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
    build-depends:       Cabal,
                         DRBG,
                         aeson,
                         aeson >= 0.11.2.1,
                         base,
                         bce,
                         bce,
                         binary,
                         bytestring,
                         bytestring-arbitrary >= 0.1.1,
                         concurrent-extra,
                         containers,
                         crypto-api,
                         data-default,
                         directory >= 1.3,
                         either,
                         extra,
                         http-client,
                         http-client >= 0.5.7.0,
                         leveldb-haskell,
                         mtl,
                         network,
                         parsec,
                         parsec >= 3.1.11,
                         random,
                         stm,
                         text >= 1.2.2.1,
                         time,
                         transformers,
                         word8,
                         base16-bytestring

                         

    hs-source-dirs: src/BceCli
    default-language:    Haskell2010
    

Test-Suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    Main-is:          Main.hs
    ghc-options: -threaded 
    Build-Depends:  DRBG
                  , QuickCheck >= 2.8.2
                  , Spock >= 0.12.0.0
                  , aeson >= 0.11.2.1
                  , base
                  , bce
                  , binary
                  , bytestring
                  , bytestring-arbitrary
                  , bytestring-arbitrary >= 0.1.1
                  , concurrent-extra
                  , containers
                  , crypto-api
                  , data-default
                  , directory >= 1.3
                  , either
                  , extra
                  , hspec
                  , hspec >= 2.2.4
                  , http-client >= 0.5.7.0
                  , leveldb-haskell
                  , mtl
                  , network
                  , parsec >= 3.1.11
                  , random
                  , stm
                  , text >= 1.2.2.1
                  , time
                  , transformers
                  , word8

    default-language:    Haskell2010                  
                         
